--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="Note Keeper"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pluralsight_UnderstandingAndroidApplicationBasics_NoteKeeper"
@@ -16,7 +16,7 @@
         <activity
             android:name=".NoteListActivity"
             android:exported="true"
-            android:label="@string/title_note_list_activity"
+            android:label="@string/app_name"
             android:theme="@style/Theme.Pluralsight_UnderstandingAndroidApplicationBasics_NoteKeeper.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
